# discord-bot-api

./: .env  .gitignore  .travis.yml  Cargo.toml  Procfile  README.md
migrations/2019-01-09-002744_create_models/: down.sql  up.sql
migrations/2019-01-09-022843_add_api_key/: up.sql
migrations/2019-11-20-232103_add-reset-time/: up.sql
src/: artifact.rs  hello.rs  main.rs  models.rs  schema.rs  tip.rs
static/: card_set_1.json  deck_decoder.php
wasm_test/: balls_and_wall_wasm.js  balls_and_wall_wasm.wasm  balls_and_walls.js  balls_and_walls.wasm  index.html
