[package]
name = "bot_api_site"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]

[dependencies]
iron = "0.6.*"
router = "*"
staticfile = "*"
mount = "0.4.0"
base64 = "*"
regex = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
artifact_serde = { path="../artifact"}
